@@ -1105,7 +1105,7 @@
             &#39;StageRelaxation&#39; will be used (default 0.025).&nbsp; The backlash movement will 
             be opposite to the stage movement unless B is negative.&nbsp; To assess the 
             value of relaxation, a measurement of the time it takes for drift to settle 
-            hould be done after this command.</TD>
+            should be done after this command.</TD>
         </TR>
         <TR vAlign="top">
           <TD class="style13">RelaxStage [#R]</TD>
