@@ -3,9 +3,19 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+11/8/17: Fixed loss of PriorRecordDose and FramesDosesCounts from mdoc for
+first part of bidirectional tilt series.
+
 11/5/17 SEM_3-6-13
 11/5/17: Fixed the lack of defect correction when drift correction is used in
 the OneView if there is no BasicCorrections property entry (In 3.6).
+
+11/3/17: Preliminary version with changes for DE camera
+counting/super-resolution modes and ability to set save folder.
+
+11/3/17: Rearranged camera setup so that dark reference options could be
+hidden when inappropriate, also hide shuttering and lower size buttons for
+Falcon.
 
 10/22/17: Prevented DE camera FPS value from being put in wrong camera's
 parameters (In 3.6).
